update nav & swiper

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,3 @@
 @import './utils/animations/hero-text-loop.css';
 @import './utils/animations/swiper.css';
-@import './global/navbar.css';
+@import './utils/global/navbar.css';
